Nuevo resolutor de fuerza bruta, mucho mas lento pero sirve para las pruebas. Comienzo del uso de Kotlin como lenguaje de programación